<resources>
    <string name="app_name">Ifsc_Bankdetails</string>
    <string name="search_by_micr">Search by MICR</string>
    <string name="validate_ifsc_code">Validate IFSC Code?</string>
    <string name="search_history">Search History</string>
    <string name="get_ifsc_code">Get IFSC Code</string>
    <string name="all_india_banks_ifsc_info">All India Banks / IFSC Info</string>
    <string name="todo">TODO</string>
    <string name="enter_micr">Enter MICR</string>
    <string name="find_details">Find Details</string>
    <string name="branch">Branch :</string>
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
    <string name="textview">TextView</string>
    <string name="bank">Bank</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="contact">Contact</string>
    <string name="ifsc">IFSC</string>
    <string name="address">Address</string>
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="todo">TODO</string>-->
<!--    <string name="todo">TODO</string>-->
<!--    <string name="todo">TODO</string>-->
    <string name="enter_ifsc">Enter IFSC</string>
    <string name="validate">Validate</string>
<!--    <string name="branch">Branch :</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="bank">Bank</string>-->
<!--    <string name="state">State</string>-->
<!--    <string name="district">District</string>-->
<!--    <string name="city">City</string>-->
<!--    <string name="contact">Contact</string>-->
    <string name="micr">MICR</string>
<!--    <string name="address">Address</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
<!--    <string name="todo">TODO</string>-->
<!--    <string name="todo">TODO</string>-->
<!--    <string name="todo">TODO</string>-->
</resources>