<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_navigator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ifsc_bankdetails.NavigatorActivity">

    <TextView
        android:text="@string/all_india_banks_ifsc_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="26sp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:src="@drawable/check"
        android:id="@+id/imageView"
        android:layout_marginBottom="15dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/todo" />

    <Button
        android:text="@string/get_ifsc_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGetIfsc"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"/>

    <Button
        android:text="@string/validate_ifsc_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnValidateIfsc"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"/>

    <Button
        android:text="@string/search_by_micr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnMicr"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"/>

    <Button
        android:text="@string/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSearchHistory"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"/>
</LinearLayout>